[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

description = "Rust examples."
readme = "README.md"
repository = "https://github.tmc-stargate.com/arene-driving/thirteenth-floor-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yaml-include = { version = "0.7.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
