[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

description = "Rust examples."
readme = "README.md"
repository = "https://github.tmc-stargate.com/arene-driving/thirteenth-floor-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = { version = "0.10.0" }                                 # miette, eyre
color-eyre = "0.6"                                                  # eyre
log = { version = "0.4.19" }                                        # miette, eyre
miette = { version = "5.10.0", features = ["backtrace", "fancy"] }  # miette
thiserror = { version = "1.0.40" }                                  # miette, eyre

tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.0", features = [ "env-filter" ] }
tracing = { version = "0.1.13" }

# yaml-include = { version = "0.7.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
