[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

description = "Rust examples."
readme = "README.md"
repository = "https://github.tmc-stargate.com/arene-driving/thirteenth-floor-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
backtrace = { version = "0.3" }                                     # backtrace
bevy_reflect = { version = "0.12" }                                 # reflect
color-eyre = "0.6"                                                  # eyre
env_logger = { version = "0.10.0" }                                 # all
inventory = { version = "0.3" }                                     # inventory
log = { version = "0.4.19" }                                        # miette, eyre
miette = { version = "5.10.0", features = ["backtrace", "fancy"] }  # miette
nalgebra = { version = "0.32.2" }                                   # isometry
serde = { version = "1.0.193" }                                     # serde_trait
serde_yaml = { version = "0.9.21" }                                 # serde_trait
typetag = { version = "0.2.15" }                                    # serde_trait
thiserror = { version = "1.0.40" }                                  # miette, eyre
tupleops = { version = "0.1.1" }                                    # tuples
# yaml-include = { version = "0.7.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
